@@ -1,5 +1,9 @@
 2017-01-05  Michael Wiegand <michael.wiegand@greenbone.net>
 
+	* base/openvas_hosts.c: Fix typos in comments.
+
+2017-01-05  Michael Wiegand <michael.wiegand@greenbone.net>
+
 	* misc/openvas_logging.c: Remove outdated reference.
 
 2017-01-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
